--- a/cities.html
+++ b/cities.html
@@ -104,6 +104,38 @@
     </tbody>
   </table>
   </div>
+  <br>
+  <h4 style="text-align: center; color:red;">Buttons and Button Groups</h4><br>
+  <label>Buttons</label>
+  <br>
+  <button class="btn">G</button>
+  <button class="btn">U</button>
+  <button class="btn">R</button>
+  <button class="btn">R</button>
+  <button class="btn">A</button>
+  <button class="btn">M</button>
+  <br>
+
+  <label>Button Groups</label><br>
+  <div>
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+      <div class="btn-group me-2" role="group" aria-lable="First group">
+        <button type="button" class="btn btn-success">G</button>
+        <button type="button" class="btn btn-success">U</button>
+        <button type="button" class="btn btn-success">R</button>
+      </div>
+
+      <div class="btn-group me-2" role="group" aria-label="Second group">
+        <button type="button" class="btn btn-warning">R</button>
+        <button type="button" class="btn btn-warning">A</button>
+      </div>
+
+      <div class="btn-group me-2" role="group" aria-label="Third group">
+        <button type="button" class="btn btn-danger">M</button>
+      </div>
+    </div>
+  </div>
+
 
         
 
