--- a/cities.html
+++ b/cities.html
@@ -135,6 +135,18 @@
       </div>
     </div>
   </div>
+  <br>
+<div class="dropdown" Style="position: relative; display: inline-block;">
+  <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      Dropdown
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <li><a class="dropdown-item" href="basic.html">Basic Page</a></li>
+      <li><a class="dropdown-item" href="advanced.html">Advanced Page</a></li>
+  </div>
+</div>
+<br>
+<br>
 
 
         
