--- a/cities.html
+++ b/cities.html
@@ -166,11 +166,55 @@
 </div>
 <br>
 <br>
-
-
-        
-
-
-
+<br>
+<br>
+<div class="container">
+  <form action="">
+      <div class="form-group">
+          <label for="Email" class="form-label">Email address :</label>
+          <input type="email" class="form-control" id="Email" placeholder="Enter Your Email Address"  
+          aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="form-group">
+          <label for="City" class="form-label">City :</label>
+          <input type="text" class="form-control" id="CityInput" 
+          placeholder="Enter Your City">
+      </div><br>
+      <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="Check">
+          <label class="form-check-label" for="Check">Sign up for newsletter?</label>
+      </div>
+      <button class="btn btn-primary" type="submit">Submit</button>
+  </form>
+</div>
+<br>
+  <div class="row">
+    <div class="card" style="width: 18rem;">
+      <img src="Goa.jpg" class="card-img-top" alt="AfricanViolet">
+      <div class="card-body">
+        <h5 class="card-title">Goa</h5>
+        <p class="card-text">Goa (Konkani: [goa] i) is a state on the southwestern coast of India within the Konkan region, geographically separated from the Deccan highlands by the Western Ghats</p>
+        <a href="https://en.wikipedia.org/wiki/Goa" class="btn btn-primary">About</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="Agra.jpg" class="card-img-top" alt="grapevines">
+      <div class="card-body">
+        <h5 class="card-title">Agra</h5>
+        <p class="card-text">Agra is a city on the banks of the Yamuna river in the Indian state of Uttar Pradesh, about 230 kilometres (140 mi) south-east of the national capital Delhi and 330 km west of the state capital Lucknow.</p>
+        <a href="https://en.wikipedia.org/wiki/Agra" class="btn btn-primary">About</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="Ranchi.jpg" class="card-img-top" alt="NorfolkIslandPine">
+      <div class="card-body">
+        <h5 class="card-title">Ranchi</h5>
+        <p class="card-text">Ranchi is the capital of the Indian state of Jharkhand.[6] Ranchi was the centre of the Jharkhand movement,[7] which called for a separate state for the tribal regions of South Bihar, northern Odisha, western West Bengal and the eastern area of what is present-day Chhattisgarh.</p>
+        <a href="https://en.wikipedia.org/wiki/Ranc" class="btn btn-primary">About</a>
+      </div>
+    </div>
+  </div>
+<br>
 </body>
 </html>
